--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="body">
     <div class="container body">
       <section id="inicio">
-        <header>
+        <header>s
             <h1 class="text-center">La Misión de Guadalupe de los Indios Mansos del Paso del Norte</h1>
         </header>
       </section>
